@@ -1,3 +1,9 @@
+2006-03-09 Borut Razem <borut.razem@siol.net>
+
+	* examples/modules/usart_gui/usart_gui.asm,
+	  examples/modules/usart_gui/usart_gui.stc:
+	  Renamed the usart RX and TX pins to RXPIN and TXPIN
+
 2006-03-07 Scott Dattalo <scott@dattalo.com>
 	* src/gui_src_asm.cc: Turned off debugging. Added a gtk event
 	queue wait.
